--- a/Relation between Linguistic Antipatterns and Violations of Design Principles in RESTful APIs (Version 3956)/Template_report_LaTeX_EN/referenser.bib
+++ b/Relation between Linguistic Antipatterns and Violations of Design Principles in RESTful APIs (Version 3956)/Template_report_LaTeX_EN/referenser.bib
@@ -1,45 +1,23 @@
-@electronic{courseroom,
-author = {{Linnaeus University}},
-title = {Course {R}oom for {D}egree {P}rojects},
-year = 2015,
-url = {https://mymoodle.lnu.se/course/view.php?id=5297\#section-4}
-}
-@electronic{ieeeguide,
-author = {{Monash University}},
-title = {Citing and referencing: {IEEE}},
-year = 2015,
-month = {Oct. 13},
-url = {http://guides.lib.monash.edu/citing-referencing/ieee}
-}
-@article{bigdata,
-author = {C. Lynch},
-title = {Big data: {H}ow do your data grow?},
-year = 2008,
-journal = {Nature},
-volume = 455,
-pages = {28-29}
-}
-@book{ai,
-author = {S. Russell and P. Norvig},
-edition = {3rd},
-publisher = {Prentice {H}all},
-title = {{Artificial Intelligence: A Modern Approach}},
-year = {2010}
-}
-@InProceedings{bigdata2,
-  title={{Big data and cloud computing: current state and future opportunities}},
-  booktitle={{Proceedings of the 14th International Conference on Extending Database Technology}},
-  author={D. Agrawal and S. Das and A. E. Abbadi},
-  pages = {530-533},
-  year={2011}
-}
-
 @electronic{octogithub,
     author = {{GitHub}},
     title = {{The State of the Octoverse}},
     year = 2019,
     note = {Accessed on: May 28, 2020},
     url = {https://octoverse.github.com/}
+}
+
+@electronic{sofaanti,
+    author = {{sofa}},
+    title = {{SOA Antipatterns}},
+    note = {Accessed on: May 28, 2020},
+    url = {http://sofa.uqam.ca/resources/antipatterns.php}
+}
+
+@electronic{sofapatt,
+    author = {{sofa}},
+    title = {{SOA patterns}},
+    note = {Accessed on: May 28, 2020},
+    url = {http://sofa.uqam.ca/resources/patterns.php}
 }
 
 @electronic{typescript,
@@ -104,4 +82,3 @@ year = {2010}
     
     year = {Empir. Softw. Eng. 21(1) (2015)104–158}
 }
-
