updated, e.g. api motivations, analysis, conclusion

--- a/REST API Report/Conclusion.tex
+++ b/REST API Report/Conclusion.tex
@@ -10,7 +10,7 @@ One cannot conclude from our result if this is a causal relationship, but this c
 
 Apart from the moderate relationships mentioned above, there were only weak and negligible relationships found. The design antipattern Breaking Self-descriptiveness (using non-standard headers) were found among almost all endpoints, but all the other antipatterns were only discovered in a minority of endpoints. 
 
-There was a lower occurrence of most antipatterns in our result compared to earlier research by Palma et al. \cite{design}, \cite{linguistic}. This could mean that APIs have gotten better at following RESTful patterns. Many APIs are perhaps nowadays using frameworks that automatically ensure they are following many standard RESTful patterns.
+There was a lower occurrence of most antipatterns in our result compared to earlier research by Palma et al. \cite{design}, \cite{linguistic}. This could mean that APIs have gotten better at following RESTful patterns. Many APIs are perhaps nowadays using frameworks that automatically ensure they are following many standard RESTful patterns. \textcolor{blue}{The result of the research is very dependent on our detection function and how accurately they detect an antipattern. Some detection function might be to strict and include endpoints that are debatable if they should be considered antipattern - thinking about standard headers, ignoring MIME-types for example - while others might be too loose like forgetting hypermedia. The difficulty to detect non-hierarchical nodes is also a concerned needed to be raised for future work.}
 
 \subsection{Future Work}
 
