--- a/REST API Report/Introduction.tex
+++ b/REST API Report/Introduction.tex
@@ -10,7 +10,7 @@ There are multiple aspects of REST design, and previous research by Palma et al.
 REST linguistic quality is for HTTP resources about URIs. It is important that URIs are designed in a good and clear way that is easy to read and understand according to standard best practice recommendations of REST. This is to enable and simplify communications \cite{restdissertation}\cite{linguistic}. 
 
 
-One aspect of linguistic quality is linguistic antipatterns. Arnaoudova et al. described linguistic antipatterns as the deviation from the best practices for the designing URIs \cite{arnaoudova}. Another aspect of linguistic quality is linguistic patterns which is described by Palma et al. as the opposite of antipatterns, i.e., when best practice has been adhered and the URIs are correctly designed. A lack of linguistic antipatterns and a presence of linguistic patterns results in a good linguistic quality. Both linguistic patterns and antipatterns are therefore aspects of linguistic quality \cite{linguistic}.
+One aspect of linguistic quality is linguistic antipatterns. Arnaoudova et al. described linguistic antipatterns as the deviation from the best practices for designing URIs \cite{arnaoudova}. Another aspect of linguistic quality is linguistic patterns which is described by Palma et al. as the opposite of antipatterns, i.e., when best practice has been adhered and the URIs are correctly designed. A lack of linguistic antipatterns and a presence of linguistic patterns results in a good linguistic quality. Both linguistic patterns and antipatterns are therefore aspects of linguistic quality \cite{linguistic}.
 
 There are multiple linguistic patterns and antipatterns \cite{linguistic}. In this study, we will not focus on all of them, we will focus on five linguistic patterns and five linguistic antipatterns. These will be described detail with rules for approaches for detecting them in Tables \ref{tab:Rulesforlinguisticantipatterns} and \ref{tab:Rulesforlinguisticpatterns}. %The reason we selected these was partially because these have central roles and are important but also because we assessed that it would be feasible within the scope of this study for us to  develop processes to identify and detect these.
 
