--- a/REST API Report/Report.tex
+++ b/REST API Report/Report.tex
@@ -14,6 +14,8 @@
 
 \documentclass[a4paper,12pt]{article}
 \usepackage[maxfloats=256]{morefloats}
+\usepackage{algorithm}
+\usepackage{algorithmic}
 \usepackage[T1]{fontenc}
 \usepackage{times}
 \usepackage[english]{babel}
