--- a/REST API Report/referenser.bib
+++ b/REST API Report/referenser.bib
@@ -43,6 +43,22 @@
     url = {https://nodejs.org/en/about/}
 }
 
+@misc{ohloh,
+    author = {{Black Duck Software, Inc.}},
+    title = {{About the Black Duck Open Hub}},
+    year = 2020,
+    note = {Accessed on: July 1, 2020},
+    url = {https://blog.openhub.net/about/}
+}
+
+@misc{musicrapid,
+    author = {{RapidAPI}},
+    title = {{MusicGraph API}},
+    year = 2020,
+    note = {Accessed on: July 1, 2020},
+    url = {https://rapidapi.com/blog/directory/musicgraph/}
+}
+
 @electronic{wikipediahttp,
     author = {{Wikipedia}},
     title = {{List of HTTP header fields}},
