--- a/REST API Report/Introduction.tex
+++ b/REST API Report/Introduction.tex
@@ -71,12 +71,10 @@ no findings
 \end{center}
 \end{table}
 
-
 No studies were found that are about this specific topic, i.e., if there is a relation between linguistic quality and design quality in RESTful APIs. However, while this study is being made, another study is being conducted which is about if there is a relation between linguistic quality and design quality in Google APIs. Google APIs will therefore be excluded from this study.
 
 \subsection{Problem formulation}
 The aim of this study is to investigate if there is relation between  linguistic quality and design quality in widely used REST APIs. Antipatterns which decrease the quality has been detected in earlier research by Palma et al. \cite{linguistic}\cite{design} but finding a relationship between design and linguistic quality has not been done in earlier research. We will use the same rules for detection as described by Palma et al. \cite{linguistic} \cite{design}.
-
 
 \subsection{Motivation}
 Currently, there are numerous APIs available ranging from all kinds of categories imaginable. With this huge diversity, there is a need for standardization to make the developers recognize how to use each API. APIs that are not following the standard might be difficult to understand and developers might choose other APIs that do follow the standard.
@@ -102,7 +100,7 @@ This research is meant raise the awareness of antipatterns in APIs, and encourag
 \end{table}
 
 \subsection{Scope/Limitation}
-The APIs used in this study are partly from the APIs set used by Palma et al. \cite{linguistic} (see Table \ref{tab:APIsusedintheresearch}). Google APIs will be excluded since another study similar to this is being conducted but exclusively about Google APIs. How endpoints will be selected is discussed in Section \ref{Reliability and Validity} about reliability and validity in the Method.
+The APIs used in this study are partly from the APIs set used by Palma et al. \cite{linguistic} (see subsection \ref{selectedAPIs}). Google APIs will be excluded since another study similar to this is being conducted but exclusively about Google APIs. How endpoints will be selected is discussed in Section \ref{Reliability and Validity} about reliability and validity in the Method.
 
 
 \subsection{Research Questions}
