--- a/REST API Report/Method.tex
+++ b/REST API Report/Method.tex
@@ -15,7 +15,7 @@ To answer RQ1 we have performed a Chi-Square test on the design quality data \te
 
 \clearpage
 
-\subsection{APIs Used for the Study}
+\subsection{APIs Used for the Study} \label{selectedAPIs}
 
 We selected ten REST APIs for this study. In Table \ref{tab:APIsusedintheresearch}, each API is listed with their current version in use and link to documentation.
 
