--- a/REST API Report/Results.tex
+++ b/REST API Report/Results.tex
@@ -243,10 +243,11 @@ Pluralised Nodes vs Misusing Cookies & 0.1852
     \label{tab:Linguisticvsdesignantipatterns}
 \end{table}
 
-
 The results in Table \ref{tab:Linguisticvsdesignantipatterns} indicate a moderate positive relation between the  CRUDy URIs linguistic antipattern and the  Misusing Cookies design antipattern. It also indicates a weak positive relation between the  Contextless Resource Names linguistic antipattern and the  Ignoring Status Code design antipattern. 
 
 Further indications of the result show that the  Amorphous URIs linguistic antipattern has a weak negative relation between both the  Misusing Cookies design antipattern and the Ignoring MIME Types design antipattern. 
+
+\clearpage
 
 \subsection{RQ1.2: Is there a relation between design patterns and linguistic antipatterns in RESTful APIs?}
 
@@ -293,6 +294,8 @@ Singularised Nodes vs Content Negotiation & -0.0985
 
 
 Our result from Table \ref{tab:Linguisticvsdesignpatterns} indicate a weak negative relation between the design pattern Content Negotiation and the linguistic pattern Tidy URIs. 
+
+\clearpage
 
 \subsection{RQ1.3: Is there a relation between design antipatterns and linguistic patterns in RESTful APIs?}
 
@@ -367,11 +370,11 @@ Singularised Nodes vs Misusing Cookies & -0.1852
     \label{tab:Linguisticpatternsvsdesignantipatterns}
 \end{table}
 
-
-
 This result Table of \ref{tab:Linguisticpatternsvsdesignantipatterns} show a weak positive relations between the Tidy URIs linguistic pattern and the  Ignoring MIME Types and Misusing Cookies design antipatterns. 
 
 Also a moderate negative relation between the  Verbless URIs linguistic pattern and the  Misusing Cookies design antipattern. Our results also indicate a weak negative relation between the  Contextualised Resource linguistic pattern and the  Ignoring Status Code design antipattern.
+
+\clearpage
 
 \subsection{RQ1.4: Is there a relation between design- and linguistic patterns in RESTful APIs?}
 
