--- a/REST API Report/Analysis.tex
+++ b/REST API Report/Analysis.tex
@@ -1,6 +1,6 @@
 \section{Analysis}
 
-While answering the high-level research question  \textbf{RQ1} on \textit{Is there a relation between design- and linguistic quality in RESTful APIs?} \textcolor{blue}{Yes.} Based on Chi square test there is a relationship between design and linguistic quality in REST APIs. The Chi square test where a combination of antipatterns, patterns, and a mix of both. \textcolor{blue}{The p-value was very low indicating a significant correlation.}
+While answering the high-level research question  \textbf{RQ1} on \textit{Is there a relation between design- and linguistic quality in RESTful APIs?} \textcolor{blue}{Yes.} Based on Chi square test there is a relationship between design and linguistic quality in REST APIs. The Chi square test where a combination of antipatterns, patterns, and a mix of both. \textcolor{blue}{The p-value was very low indicating a significant relation.}
 
 While answering the first sub-research question \textbf{RQ1.1} on \textit{Is there a relation between design and linguistic antipatterns in RESTful APIs?} \textcolor{blue}{Yes.} according to the Phi coefficient pairwise tests between the design and linguistic antipatterns there is a moderate positive relationship between CRUDy URIs and Misusing Cookies. This is the strongest relation followed by a weak positive relationship for Contextless Resource Names vs Ignoring Status Code.
 
@@ -9,5 +9,55 @@ While answering the second sub-research question \textbf{RQ1.2} on \textit{Is th
 While answering the third sub-research question  \textbf{RQ1.3} on \textit{Is there a relation between design antipatterns and linguistic patterns in RESTful APIs?} \textcolor{blue}{Yes.} We can see that there is an overall negative relationship between these two. If there are design antipatterns linguistic pattern seem to be less common also. As in RQ1.2, a lot of the pairwise tests could not yield any definitive conclusion.
 
 While answering the fourth sub-research question \textbf{RQ1.4} on \textit{Is there a relation between design- and linguistic patterns in RESTful APIs?} \textcolor{blue}{Yes.} Here we find a weak positive relationship in the pairwise phi coefficient tests between Amorphous URIs and Content Negotiation.
+
+\subsection{\textcolor{red}{RQ1: Is there a relation between design- and linguistic quality in RESTful APIs?}}
+
+\textcolor{red}{Yes.}
+
+\textcolor{red}{Based on the Chi square test there is a relationship between design and linguistic quality in REST APIs. The Chi square test where a combination of antipatterns, patterns, and a mix of both.} \textcolor{blue}{The p-value was very low indicating a significant relation.}
+
+\subsection{\textcolor{red}{RQ1.1: Is there a relation between design and linguistic antipatterns in RESTful APIs?}}
+
+\textcolor{red}{Yes.}
+
+\textcolor{red}{
+There is a moderate positive relation between the linguistic antipattern CRUDy URIs and the design antipattern Misusing Cookies. This means that our result indicates a heightened likelihood of occurrences of one of these aspect if the other is frequently occurring. 
+}
+
+\textcolor{red}{
+All the other pairwise comparisons resulted in relations that were weak, negligible or non-applicable. 
+}
+
+\subsection{\textcolor{red}{RQ1.2: Is there a relation between design patterns and linguistic antipatterns in RESTful APIs?}}
+
+\textcolor{red}{No moderate or strong relations were found.}
+
+\textcolor{red}{
+All the pairwise comparisons resulted in relations that were weak, negligible or non-applicable. 
+}
+
+\textcolor{red}{
+This can be explained by the fact that both moderate relations found in our result involved the design antipattern Misusing Cookies and since there is no corresponding design pattern for that design antipattern \cite{design}.
+}
+
+\subsection{\textcolor{red}{RQ1.3: Is there a relation between design antipatterns and linguistic patterns in RESTful APIs?}}
+
+\textcolor{red}{Yes.}
+
+\textcolor{red}{
+There is a moderate negative relation between the linguistic pattern Verbless URIs and the design antipattern Misusing Cookies. This means that our result indicates a heightened likelihood of occurances of one of these aspects if the other is frequently occuring. Verbless URIs is the corresponding linguistic pattern of the linguistic antipattern CRUDy URIs. 
+}
+
+\textcolor{red}{
+All the other pairwise comparisons resulted in relations that were weak, negligible or non-applicable. 
+}
+
+\subsection{\textcolor{red}{RQ1.4: Is there a relation between design- and linguistic patterns in RESTful APIs?}}
+
+\textcolor{red}{No moderate or strong relations were found.}
+
+\textcolor{red}{
+The explanation for this is the same as for RQ1.2. Since there is no corresponding design pattern for the design antipattern Misusing cookies, all the pairwise comparisons resulted in relations that were weak, negligible or non-applicable. 
+}
 
 \newpage
